Forense: 2 primeros dias hechos

--- a/HFC/Forense/apuntes/HFC12_11_2024.md
+++ b/HFC/Forense/apuntes/HFC12_11_2024.md
@@ -1,16 +1,30 @@
 [<- Índice](../Forense.md)
+# Contenidos
+
+1. ***Introducción y Antecedentes***
+2. ***Sistema de archivos***
+3. ***Forense en Sistemas Linux***
+4. ***Forense en Dispositivos Moviles***
+5. ***Forense en Sistemas Windows***
+6. ***Forense en memoria volátil***
+
 # Antecedentes
+
+> Conocer las bases y fundamentos de las técnicas de análisis forense digital visto de una manera teórico/práctica enfocada en el uso de herramientas especializadas.
+
 ## Conceptos Esenciales
 
 ***Evento***: Es cualquier ocurrencia
 
 ***Incidente***: Evento anómalo y de relevancia el cual de acuerdo con las reglas del negocio hacia algún activo de información ==**afecta**== cualquier elemento de la triada de la ciberseguridad.
 
-###### ¿Qué es la informática forense?
+#### ¿Qué es la informática forense?
 
 > *"Es una rama de la computación dedicada a la aplicación de técnicas, científicas y analíticas para la captura, procesamiento, análisis e investigación de información almacenada en computadoras utilizando una ==metodología== donde la evidencia descubierta es aceptable en un proceso legal."*
 
 El análisis forense se basa en un importante estatuto de hace más de 100 años:
+
+###### *Principio de Locard*
 
 > *"Siempre que 2 objetos entran en contacto transfieren parte del material que incorporan al otro objeto"*
 
@@ -18,7 +32,7 @@ El análisis forense se basa en un importante estatuto de hace más de 100 años
 
 ## Fundamentos del análisis forense
 
-1. ***Imparcialidad***: Esta debe regir sobre toda la investigación y sobre los demás fundamentos.
+1. **Imparcialidad**: Esta debe regir sobre toda la investigación y sobre los demás fundamentos.
 2. **Generar registro de absolutamente todo**
 3. **Minimizar la perdida de evidencia**
 4. **Analizar la evidencia recopilada**
@@ -35,7 +49,7 @@ Además se definen características generales del objeto que se está buscando.
 - ¿Qué estamos buscando?
 - ¿En dónde esperamos encontrarlo?
 
-## *Guia del Qué*
+### *Guia del Qué*
 
 - ¿Qué ocurrió?
 - ¿Cuando ocurrió?
@@ -46,9 +60,9 @@ Además se definen características generales del objeto que se está buscando.
 
 ## Evidencia Digital
 
-> Todo aquel elemento de información que respalda una hipótesis durante un proceso de investigación.
+> Todo aquel elemento de información que respalda una hipótesis durante un proceso de investigación se denomina ***evidencia***.
 
-Pueden estar contenidos en:
+Podemos extraer evidencia de dispositivos:
 
 - Computadoras personales
 - Teléfonos inteligentes
@@ -100,7 +114,7 @@ Un breve repaso de las etapas de una respuesta a incidentes es:
 	1. Verificación
 	2. Descripción del sistema
 
-2. Adquisición de evidencia
+2. ***Adquisición de evidencia***
 
 3. ***Análisis e investigación***:
 	1. Análisis de línea del tiempo
@@ -108,21 +122,24 @@ Un breve repaso de las etapas de una respuesta a incidentes es:
 	3. Búsqueda de cadenas
 	4. Recuperación de datos
 
-4. Reporte de resultados
+4. ***Reporte de resultados***
 
 ---
 ### Verificación
 
-Los primeros momentos una vez que ha sucedido un incidente de ciberseguridad son fundamentales para una respuesta adecuada.
+> ***Los primeros momentos una vez que ha sucedido un incidente de ciberseguridad son fundamentales para una respuesta adecuada.***
 
-> Dependiendo del tipo de incidente, es necesario realizar tareas puntuales (captura de tráfico, adquisición de memoria volátil, entrevistas con los usuarios o responsables de equipos) antes de iniciar con el proceso de respuesta a incidentes.
+Dependiendo del tipo de incidente, es necesario realizar tareas puntuales (captura de tráfico, adquisición de memoria volátil, entrevistas con los usuarios o responsables de equipos) antes de iniciar con el proceso de respuesta a incidentes.
 
 ##### Primera respuesta al incidente
 
-> Alguien capacitado busca identificar el incidente y evaluar la situación para brindar la respuesta adecuada, con apyo del manejo de herramientas de recolección de información.
+> El ***primer respondiente*** debe estar capacitado para identificar el incidente y evaluar la situación para brindar la respuesta adecuada, con apoyo del manejo de herramientas de recolección de información.
 
 1. **Ejecutar**: Debe manejar adecuada y correctamente las herramientas dispuestas para la respuesta.
-2. **Acercamiento**: Involucra el trato con las personas, recolectando toda la información importante de las personas.
+
+2. **Acercamiento**: Involucra el ==primer trato con las personas== más allá de las herramientas, recolectando toda la información importante de ellas.
+
+3. **Entrevistar**: El **primer respondiente** debe dirigir entrevistas con todas las personas que se vean involucradas en el incidente, desde el que reporto el incidente hasta los administradores encargados del área.
 
 ### Descripción del sistema
 
@@ -134,7 +151,7 @@ Los primeros momentos una vez que ha sucedido un incidente de ciberseguridad son
 - Programas/Servicios instalados en el sistema.
 - Usuarios válidos.
 
-### Adquisición de Evidencia
+### Adquisición de evidencia
 
 > El objetivo principal es la preservación del estado original de la evidencia y todas las acciones realizadas en esta etapa deben ser correctamente documentadas con puntualidad.
 
@@ -143,27 +160,29 @@ Se pueden encontrar principalmente 2 escenarios:
 - **Equipo encendido**: Se le conoce como *sistema vivo*, evidencia volátil.
 - **Equipo apagado**: Se le conoce como *sistema muerto*, evidencia no volátil.
 
-###### Equipo encendido
+##### Equipo encendido
 
 - La recolección de memoria volátil consiste en realizar una copia de todos los bits de la memoria *RAM* y redirigirlos a un archivo.
 - Existen múltiples herramientas que permitan realizar este *"volcado de memoria"*
 
-###### Equipo apagado
+##### Equipo apagado
 
 - Unidades de almacenamiento
 - Sistemas de archivos
 - Bitácoras
 - Artefactos del sistema operativo
 
-La decisión de apgar o desconectar el equipo de la red durante la etapa de respuesta a incidentes ==dependerá de las políticas de cada corganización==.
+La decisión de apagar o desconectar el equipo de la red durante la etapa de respuesta a incidentes ==dependerá de las políticas de cada organización==.
 
-Realizar un análisis vivo y además un análisis muerto permitirá obtener mayor evidencia y por lo tanto, realizar un análisis más completo con conclusiones mejor fundamentadas.
+Realizar un **análisis vivo** y además un **análisis muerto** permitirá obtener mayor evidencia y por lo tanto, realizar un análisis más completo con conclusiones mejor fundamentadas.
 
-##### Imagen Forense
+#### *Imagen Forense*
 
-Antes de seguir con las etapas, debe especificarse qué es una imagen forense:
+La **evidencia** más importante que podemos adquirir es una ***imagen forense***.
 
-> Una ***imagen forense*** es una copia bit a bit del contenido de un dispositivo de almacenamiento digital, se lleva a cabo con la ayuda de alguna herramienta avanzada.
+> Una ***imagen forense*** es una copia bit a bit del contenido de un dispositivo de almacenamiento digital, se lleva a cabo con la ayuda de alguna herramienta avanzada que realiza el copiado a nivel bits.
+
+Es importante remarcar que se diferencia con un **respaldo común** ya que éstos solo copian el espacio asignado del medio de almacenamiento.
 
 Existen varias formas de almacenar este tipo de imágenes, los formatos más comúnes son:
 
@@ -171,27 +190,41 @@ Existen varias formas de almacenar este tipo de imágenes, los formatos más com
 - *EWF* - (*Expert Witness Format*)
 - *AFF* - (*Advance Forencisc Format*)
 
-Una vez generada cada imágen forense será necesario garantizar su integridad, ya que la mínima modificación puede poner en riesgo toda la investigación.
+Una vez generada cada imágen forense será necesario garantizar su integridad, ya que la mínima modificación puede poner en riesgo toda la investigación, este proceso se denomina ***cadena de custodia***.
 
-- Algoritmos de digestión para el dispositivo original y para la copia generada.
-- Generar más de una copia y *NUNCA* trabajar con el dispositivo original.
+- ***Algoritmos de digestión*** para el dispositivo original y para la copia generada.
+- Generar ==más de una copia== y *NUNCA* trabajar con el dispositivo original.
 
-##### Principios de una adquisición
+Ya que priorizamos la ==velocidad de digestión== sobre las colisiones, debido al tamaño de los discos, se opta por utilizar funciones *hash* más básicas como ***MD*** y ***SHA****.
 
-- Preservación: Preservar el estado de la escena.
-- Cambios: Reducir los cambios a la evidencia.
-- Recopilación: Recopilar toda la información útil que se pueda.
-- Documentación: Documentar el estado de los equipos afectados.
-- Legislación: Se deben tomar en cuenta los requirimientos legales y operacionales o del negocio.
-- Cadena de Custodia: Llevar un registro acerca del manejo de la evidencia.
+La posible ==falta de seguridad== se remedia utilizando 2 firmas para las imágenes, de manera que si una presenta colisiones, la otra no.
+
+Las opciones más comúnmente utilizadas son:
+
+- *MD5*
+- *SHA-1*
+- *SHA-2*
+
+#### Principios de una adquisición
+
+- **Preservación**: Preservar el estado de la escena del crimen.
+- **Cambios**: Reducir los cambios que afecten la evidencia.
+- **Recopilación**: Recopilar toda la información útil del sistema o dispositivo por investigar.
+- **Documentación**: Documentar el estado de los equipos afectados, con **fotografías**.
+- **Legislación**: Se deben tomar en cuenta los requirimientos legales, operacionales o del negocio.
+- **Cadena de Custodia**: Llevar un registro acerca del manejo de la evidencia, respecto a quién ha interactuado con ella desde su creación hasta el final del análisis.
 
 ##### Cadena de custodia
 
-> Se refiere a un registro detallado y descriptivo de la interacción de cualquier especialista con la evidencia, con el objetivo de dar seguimiento a los cambios en ella y en dado caso, asignar responsabilidades acerca de las acciones realizadas sobre la evidencia.
+> Se refiere a un registro detallado y descriptivo de la interacción de cualquier persona con la evidencia, con el objetivo de dar seguimiento a los cambios en ella y en dado caso, asignar responsabilidades acerca de las acciones realizadas sobre la evidencia.
 
-Por supuesto esta información es crucial para una investigación interna cuando se ha contaminado la evidencia.
+Se conforma de un registro detallado de los equipos, personas y hasta herramientas involucradas en la investigación, pudiendo incluir fotografías, documentos y cualquier elemento que garantice la integridad de la evidencia.
+
+Por supuesto esta información es crucial para una investigación interna cuando se ha afectado de alguna manera engativa a la evidencia.
 
 Es importante, contar con la presencia de un tercero que dé fé de las acciones realizadas con la evidencia y respalde el registro.
+
+![ejemplo-cadena-custodia.png](imagenes/ejemplo-cadena-custodia.png)
 
 ### Análisis de Linea de Tiempo
 
@@ -210,19 +243,25 @@ También conocida como análisis de artefactos.
 
 > Se debe analizar a fondo toda la evidencia generada en la fase de adquisición.
 
+En esta etapa se definen las herramientas por utilizar, su justificación y la demostración de que el uso de dichas herramientas no modificará la evidencia durante su análisis.
+
 ### Búsqueda de cadenas
 
 > Consiste de una búsqueda de palabras clave sobre la evidencia.
 
-Se define un diccionario de palabras clave relacionadas con el incidente a investigar, incluso a bajo nivel.
+Se define un diccionario de palabras clave relacionadas con el incidente a investigar y se utiliza para buscar coincidencias en el artefacto investigado.
+
+Tambien se buscan coincidencias a nivel bajo (*bits*).
 
 ### Recuperación de datos
 
-> Busca reestablecer información, datos o archivos eliminados o almacenados en el espacio de holgura. identificar fechas de borrado.
+> Busca reestablecer información, datos o archivos eliminados o almacenados en el espacio de holgura.
+ 
+También se busca identificar fechas de borrado.
 
-Se debe describir el proceso realizado para la recuperación de datos.
+***Se debe describir el proceso realizado para la recuperación de datos.***
 
-Puede (y debería ser idealmente) realizado a bajo nivel o simplemente utilizando herramientas.
+Puede (y debería ser) realizado a bajo nivel o simplemente utilizando herramientas.
 
 ### Presentación/Reporte
 
@@ -231,3 +270,41 @@ Puede (y debería ser idealmente) realizado a bajo nivel o simplemente utilizand
 **Es importante identificar el tipo de audiencia al que va dirigido, ya sea ejecutivo o técnico.**
 
 Debe tener ==bien documentados== **todos** los procesos reaizados en la investigación, además de ser claro e imparcial.
+
+# Herramientas
+
+> Entre las herramientas que deben ser consideras en el maletín para la primera respuesta, están:
+
+- ***Equipo de red***: Cables de red, cables cruzados, *hub*, *switch*, etc.
+- ***Software***: *SysInternals*, herramientas de volcado de memoria, *scripts* personalizados, *live CD* y *USB* con alguna distribución *Linux*.
+- ***Hardware***: Duplicador o clonadora de discos, cables o adaptadores para discos, entradas y conectores, **bloqueadores de escritura** y dispositivos de almacenamiento sanitizados además de camara fotográfica y/o de video.
+
+La incorporación de más herramientas al maletín estará en función del equipo, su experiencia, objetivo y características de la organización.
+
+### Herramientas de Preservación
+
+> Las ***herramientas de preservación*** son utilizadas para evitar la modificación de información al momento de realizar el análisis, estas pueden ser de tipo *software* y *hardware*.
+
+#### Bloqueadores de escritura
+
+> Las **herramientas de preservación** más importantes son los ==bloqueadores de disco==, pues reducen la posibilidad de modificar accidentalmente el contenido del dispositivo, bloqueando cualquier instrucción de escritura.
+
+Sin embargo ==permite el paso== de instrucciones de elctura de modo que podamos generar un respaldo o imágen forense del artefacto sin (casi) ningún riesgo de perdida.
+
+##### Bloqueadores por Software
+
+> Utilizan la tabla de interrupciones para bloquear la entrada el servicio de escritura desde la *BIOS*. En lugar de contener la dirección del código del *BIOS*, ==contiene la del código del bloqueador de escritura==.
+
+##### Bloqueadores por Hardware
+
+> Verifica los comandos emitidos y previene que la computadora escriba los datos en el medio de almacenamiento.
+
+Se interpone entre la computadora y el medio de almacenamiento.
+
+---
+
+No olvidemos, que el ***objetivo final*** de un analista forense es presentar y defender un dictámen forense ante instituciones legales como puede ser la *Fiscalía General de la Republica*, algún juzgado cívico, etc.
+
+# Enlaces
+
+[Siguiente ->](HFC13_11_2024.md)
