--- a/HFC/Forense/apuntes/HFC14_11_2024.md
+++ b/HFC/Forense/apuntes/HFC14_11_2024.md
@@ -1,20 +1,9 @@
-## Sistema de Archivos
+[<- Índice](../Forense.md)
+# Sistema de Archivos
 
-### El superbloque
+## Capas de un Sistema de Archivos
 
-Es una estructura de datos ubi
-
-### Definición de bloques
-
-- La unidad básica es el bloque
-- El tamaño del bloque se define al formatear
-- Este tamaño se encuentra definido en el superbloque
-
-- Un conjunto de sectores forma un bloque.
-- A cada bloque se le puede asignar una dirección.
-- Es la unidad de tamaño más pequeña que usa el *Ext3/4*.
-
-## Capa de datos
+### Capa de datos
 
 > Esta capa representa el contenido mismo de cada archivo
 
@@ -22,7 +11,7 @@ Es una estructura de datos ubi
 - Espacio de holgura
 - Espacio contiguo
 
-## Capa de Metadatos
+### Capa de Metadatos
 
 > El propósito de esta capa es almacenar información descriptiva de cada archivo alojado en el disco duro en estructuras de datos definidas por el sistema de archivos.
 
@@ -33,3 +22,7 @@ Es una estructura de datos ubi
 #### Master File Table
 
 #### FAT
+
+# Enlaces
+
+[<- Anterior](HFC13_11_2024.md) | [Siguiente ->](HFC15_11_2024.md)
