--- a/HFC/Forense/apuntes/HFC15_11_2024.md
+++ b/HFC/Forense/apuntes/HFC15_11_2024.md
@@ -1,3 +1,6 @@
+[<- Anterior](../Forense.md)
+# Análisis Forense en Dispositivos Móviles
+
 ***Dispositivos móviles como blancos de ataques***:
 
 - Accesos no autorizados
@@ -187,3 +190,7 @@ Una vez adquirida la evidencia su análisis es similar a los métodos tradiciona
 
 Movile Security Framework
 Autopsy Windows
+
+# Enlaces
+
+[<- Anterior](HFC14_11_2024.md)
