Forense principal al dia

--- a/HFC/Forense/apuntes/HFC14_11_2024.md
+++ b/HFC/Forense/apuntes/HFC14_11_2024.md
@@ -5,23 +5,166 @@
 
 ### Capa de datos
 
-> Esta capa representa el contenido mismo de cada archivo
+> Esta capa representa el contenido mismo de cada archivo almacenado en el dispositivo.
 
-- Datos alojados y sin alojar
-- Espacio de holgura
-- Espacio contiguo
+Los unos y ceros que conforman cada elemento son almacenados en contenedores de tamaño específico, llamados ***sectores***, un conjunto de **sectores** se llama ***bloque*** o ***clúster***.
+
+En base a esto, se derivan los siguientes conceptos:
+
+- **Datos alojados** y **sin alojar**
+- **Espacio de holgura**
+- **Espacio contiguo**
+
+#### Tipos de Datos
+
+##### Alojados
+- Un bloque de datos que está siendo usado **activamente** por un archivo.
+- Los datos existen en un archivo en el sistema.
+- No han sido eliminados.
+
+##### Sin alojar
+- El bloque de datos ***no*** está siendo usado por un archivo.
+- Los datos pueden o no existir en un bloque.
+- Puede contener datos *"eliminados"* o sin usar.
+- Estas **piezas** de archivos son llamadas ***fragmentos de archivos***.
+
+#### Espacio de Holgura (Slack Space)
+
+> El espacio de holgura es el espacio restante en un bloque o clúster después de alojar un archivo.
+
+Por ejemplo, si un bloque puede alojar 2048 *bytes* y un archivo de 1285 *bytes* lo utiliza, el espacio restante se considera como *slack space*.
+
+#### Espacio contiguo
+
+> El concepto de espacio contiguo se refiere a quellos bloques que fueron utilizados por un archivo pero que quedaron remanentes cual el archivo cambió de tamaño.
+
+Por ejemplo, si un archivo ocupa los bloques de 60 a 70, si es modificado y se requieren más bloques para almacenar los datos, se asignan nuevos bloques para satisfacer el nuevo espacio requerido, por ejemplo del 70 al 85, pero los datos en los bloques originales ***no se borran***.
+
+#### SleuthKit
+
+> En esta capa, la utilidad que puede interacturar con la información en la ***capa de datos***, proveida por *SleuthKit*, es `blkcat`.
+
+```bash
+blkcat addr num
+```
+
+`addr`: Es la dirección de memoria para mostrar
+
+`num`: Número de la unidad de datos (usualmente bloques) a mostrar
+
+Es decir, se muestran `num` unidades de datos, empezando por la dirección `addr`.
 
 ### Capa de Metadatos
 
 > El propósito de esta capa es almacenar información descriptiva de cada archivo alojado en el disco duro en estructuras de datos definidas por el sistema de archivos.
 
-### Estructura de Metadatos
+Entre los datos que se almacenan se encuentra:
 
-#### i-nodos
+- Marcas de tiempo (Modificación, acceso, cambio).
+- Permisos e identificadores de grupo y usuario.
+- Lista de bloque ocupados por el archivo.
+- Identificador único.
+- Tamaño del archivo.
 
-#### Master File Table
+#### Estructura de Metadatos
 
-#### FAT
+> Existen, principalmente, **3** estructuras de **metadatos**
+
+##### *i-nodos*
+
+> Los *i-nodos* contienen información que los procesos necesitan para acceder al archivo.
+
+Cada archivo en un sistema *UNIX* tiene un único i-nodo, que contiene datos como:
+
+- Identificador del dueño
+- Tipo de archivo
+- Permisos
+- *MAC* times
+- Número de ligas
+- Apuntadores a bloques
+- Tamaño del archivo
+
+##### Master File Table
+
+> Es una lista que contiene los metadatos que describen los archivos y directorios.
+
+Contiene:
+
+- Información con el nombre de archivo
+- Datos.
+- Descriptores de seguridad
+- Apuntadores a archivos
+- *MAC* times
+
+##### FAT
+
+> Nombre de archivo compuesto por ocho letras principales más 3 letras para la extensión
+
+- Longitud del nombre
+- *MAC* times
+	- Fecha de creación del archivo
+	- Indicador de modificación a la capa de datos
+	- Indicador de acceso a la capa de datos
+- Tamaño
+- Apuntador a la capa de datos (bloques).
+
+#### SleuthKit
+
+> Para la ***capa de metadatos***, contamos con las herramientas `ils` e `icat`, que nos permiten interactuar con los *i-nodos* del sistema.
+
+```bash
+ils [imagen]
+```
+
+`ils` permite listar los *i-nodos* presentes en una imagen de disco, que recibe como parametro.
+
+Por otra parte, para enfocarnos en un *i-nodo* específico, utilizamos `icat` con el archivo de la imagen y el número identificador del *i-nodo*:
+
+```bash
+icat [imagen] [id]
+```
+
+### Capa de Nombre de Archivo
+
+El propósito de esta capa es servir como interfaz entre el usuario y el sistema operativo para poder consultar los archivos almacenados en el dispositivo.
+
+> En esta capa se guarda una relación entre nombres y direcciones de bloques utilizados por un archivo, de modo que sea más intuitivo para un usario acceder a un archivo.
+
+El nombre del archivo se almacena en el archivo del directorio, donde se contiene una lista de archivos/directorios dentro del directorio.
+
+O sea comprende toda la *"representación visual"* de los archivos.
+
+- *Unix* **no** almacena el nombre del archivo en metadatos.
+- Los nombres de archivos apuntan a la dirección de los metadatos.
+- Cuando los archivos se eliminan, el sistema de archivos simplemente oculta el nombre del archivo del usuario, pero muchos datos siguen ahi y pueden recuperarse.
+
+#### SleuthKit
+
+> Las siguientes herramientas del sistema de archivos procesan las estructuras de nombres de archivos, que normalmente se encuentran en el directorio raíz o principal.
+
+`ffind` busca los nombres de archivos alojados y no alojados en la imagen del disco, lo cual regresa la estructura de metadatos.
+
+```bash
+ffind [imagen] [nombre_archivo]
+```
+
+Por su parte, `fls` lista los nombres de archivos alojados y eliminados que detecte dentro de un directorio del archivo de imagen:
+
+```bash
+fls [imagen]
+```
+
+**Concluyendo**, al eliminar un archivo los datos continúan existiendo en disco y son recuperables siempre que los bloques que utilizaba no hayan sido sobreescritos o eliminados de manera segura.
+
+Por esto mismo es necesario realizar un barrido profundo de sectores al recuperar información borrada.
+
+En cuanto a la ***capa de datos***, los bloques ocupados por el archivo son marcados como bloques sin alojar aunque la información siga ahi.
+
+En cuanto a la ***capa de metadatos***, los *UID*, *GID* del archivo permanecen sin cambios, al igual que las fechas de modificación y accesos.
+
+La fecha del *i-nodo* cambia a la fecha de eliminación y el contador de ligas se fija a 0.
+
+Sin embargo, el tipo de archivo, permisos, tamaño y bloque de direcciones puede ser conservado o no dependiendo del tipo de sistema de archivos.
 
 # Enlaces
 
