Ligeras correciones a Forense

--- a/HFC/Forense/apuntes/HFC13_11_2024.md
+++ b/HFC/Forense/apuntes/HFC13_11_2024.md
@@ -258,7 +258,7 @@ Un grupo de bloques contiene:
 - Tabla de i-nodos
 - Datos de bloques
 
-## SleuthKit
+#### SleuthKit
 
 > ***SleuthKit*** contiene una utilidad que nos apoya con el análisis del **Sistema de Archivos**, `fsstat` que proviene de *File System Statistics*.
 
