--- a/HFC/Forense/apuntes/HFC15_11_2024.md
+++ b/HFC/Forense/apuntes/HFC15_11_2024.md
@@ -57,22 +57,28 @@ Puede ser mostrado en la pantalla marcando *\*#06#*.
 
 ## Dispositivos
 
-Es un dispositivo móvil se puede encontrar todo tipo de información útil.
+En un dispositivo móvil se puede encontrar todo tipo de información útil.
 
-Sin embargo, debido a la naturaleza de los propios dispositivos, el análisis forense a estos dispositivos varía consideramblemente del análisis forense tradicional.
+- Ubicación
+- Documentos
+- Mensajes
+- Registros
+- Multimedia
 
-- Consideraciones distintas al forense tradicional.
-- Diferentes herramientas de adquisición.
-- Diferentes técnicas de adquisición.
+Sin embargo, debido a la naturaleza de los propios dispositivos, el análisis forense a estos dispositivos ***varía considerablemente*** del análisis forense tradicional.
 
-> El primer respondiente tiene varias tareas relativas a los dispositivos móviles:
+- **Consideraciones distintas** al análisis forense tradicional.
+- Diferentes **herramientas de adquisición**.
+- Diferentes **técnicas de adquisición**.
 
-- Identificar la existencia de dispositivos finales.
-- Toma de fotografías de los dispositivos.
+> El ==primer respondiente== tiene varias tareas relativas a los dispositivos móviles:
+
+- Identificar la existencia de **dispositivos finales**.
+- ==Toma de fotografías== de los dispositivos.
 - Identificar el estado del dispositivo.
-- Aislamiento de la red: Evita que los datos almacenados sean eliminados de forma remota.
+- ***Aislamiento de la red***: Evita que los datos almacenados sean eliminados de forma remota.
 
-Las actividades del primer respondiente y las decisiones tomadas dependen de cada escenario, de las reglas del negocio y la legislación vigente.
+> Las actividades del primer respondiente y las decisiones tomadas dependen de cada escenario, de las reglas del negocio y la legislación vigente.
 
 Si el dispositivo está ***encendido***, debe intentar mantenerse así:
 
@@ -84,7 +90,7 @@ Si el dispositivo está ***encendido***, debe intentar mantenerse así:
 - Evitar que se agote la batería.
 - No provocar la desconexión de la batería y apagados o reinicios accidentales.
 
-Si el dispositivo está ***desbloqueado***, debe intentar mantenerse así:
+Por otra parte, si el dispositivo está ***desbloqueado***, debe intentar mantenerse así:
 
 - Podría no conocerse la contraseña de desbloqueo.
 
@@ -111,7 +117,7 @@ En algunos casos es viable evadir los controles de seguridad, pero tener a las c
 
 ## Sistema Operativo
 
-- El componente más relevante.
+- El componente más relevante de un dispositivo móvil.
 - Permite la interacción del *hardware* y el dispositivo.
 - Sus actualizaciones son continuas y agregan nuevas funcionalidades.
 
@@ -140,18 +146,30 @@ El desarrollador de aplicaciones cuenta con una gran variedad de opciones en las
 
 ## Herramientas
 
-Se necesitan adaptadores y bloqueadores de escritura convencionales para adquirir los datos de las tarjetas de memoria extraíbles.
+- Se necesitan adaptadores y bloqueadores de escritura convencionales para adquirir los datos de las tarjetas de memoria extraíbles.
 
 A lo largo del tiempo ha existido una gran variedad de dispositivos móviles.
 
-Hay ocasiones en las que es indispensable que no se pierda la batería del dispositivo.
+> Hay ocasiones en las que es indispensable que no se pierda la batería del dispositivo.
 
-Se debe tener el materialnecesario para aislar el dispositivo de las diferentes redes tanto en el trayecto al laboratorio como durante su análisis.
+Se debe tener el material necesario para **aislar el dispositivo** de las diferentes redes tanto en el trayecto al laboratorio como durante su análisis.
 
-No todos los métodos de adquisición se encuentran disponibles para cada marca y modelo de dispositivo.
+> No todos los métodos de adquisición se encuentran disponibles para cada marca y modelo de dispositivo.
+
 La recomendación es intentar primero los métodos que garantizan un mayor número de información.
 
-La copia bit a bit de toda la memoria flash se basa en el uso de *bootloaders*, si estos existen para la marca y modelo.
+#### Herramientas de código libre
+
+- Movile Security Framework
+- Autopsy Windows
+
+## Tipos de respaldos o imágenes
+
+Existen principalmente ==3 tipos de respaldos o imágenes== que podemos adquirir del dispositivo de almacenamiento de un **dispositivo movil**.
+
+### Respaldo crudo
+
+> La ***copia bit a bit*** de toda la memoria flash se basa en el uso de *bootloaders*, si estos existen para la marca y modelo.
 
 Se obtiene:
 
@@ -161,7 +179,9 @@ Se obtiene:
 - Bases de datos locales
 - Archivos eliminados y ocultos
 
-En *Android* se logra acceder al sistema de archivos a través del *ADB* (*Android Debug Bridge*). Es necesario habilitar las opciones de desarrollador en el dispositivo móvil.
+### Respaldo lógico
+
+> En *Android* se logra acceder al sistema de archivos a través del *ADB* (*Android Debug Bridge*). Es necesario habilitar las opciones de desarrollador en el dispositivo móvil.
 
 Se obtiene:
 
@@ -176,7 +196,9 @@ La obtención varía dependiendo de los comandos disponibles. Se podría obtener
 - Contactos
 - Historial de llamadas
 
-Su funcionamiento se basa en la búsqueda manual (*scrolling*) de los datos del celular. Es necesario grabar la pantalla con una cámara externa.
+### Respaldo manual
+
+> Su funcionamiento se basa en la búsqueda manual (*scrolling*) de los datos del celular. Es necesario ==grabar la pantalla con una cámara externa==.
 
 Se puede obtener información a la que se tiene acceso durante su uso normal
 
@@ -187,9 +209,6 @@ Una vez adquirida la evidencia su análisis es similar a los métodos tradiciona
 - Metadatos
 - Análisis de bases de datos locales
 - Etcétera
-
-Movile Security Framework
-Autopsy Windows
 
 # Enlaces
 
