Forense: Ejercicio correctamente documentado

--- a/HFC/Forense/apuntes/HFC15_11_2024.md
+++ b/HFC/Forense/apuntes/HFC15_11_2024.md
@@ -212,4 +212,4 @@ Una vez adquirida la evidencia su análisis es similar a los métodos tradiciona
 
 # Enlaces
 
-[<- Anterior](HFC14_11_2024.md) |
+[<- Anterior](HFC14_11_2024.md) | [Siguiente ->](HFC19_11_2024.md)
