Forense: Inicio de forense en Linux

--- a/HFC/Forense/apuntes/HFC19_11_2024.md
+++ b/HFC/Forense/apuntes/HFC19_11_2024.md
@@ -95,4 +95,4 @@ Con este paso realizado, ahora podemos crear, borrar e interactuar con archivos 
 
 # Enlaces
 
-[<- Anterior](HFC15_11_2024.md) |
+[<- Anterior](HFC15_11_2024.md) | [Siguiente ->](HFC20_11_2024.md)
