Forense: Inicio de linea del tiempo

--- a/HFC/Forense/apuntes/HFC20_11_2024.md
+++ b/HFC/Forense/apuntes/HFC20_11_2024.md
@@ -1,4 +1,4 @@
-[<- Índice](Forense.md)
+[<- Índice](../Forense.md)
 # Forense en Sistemas Linux
 
 ## Imágenes Forenses
@@ -315,6 +315,79 @@ lsof -i tcp
 lsof -i udp
 ```
 
+Tambien podemso analizar archivos abiertos **no referenciados**, es decir, archivos abiertos por procesos que no poseen ninguna referencia activa en el sistema de gestión de archivos ni en ninguna aplicación.
+
+```bash
+lsof +L1
+```
+
+## Modulos de kernel
+
+> Como forenses, debemos investigar los modulos de *Kernel* cargados actualmente en el ordenador, además de manipularlos adecuadamente de ser necesario.
+
+```bash
+# Listar los módulos cargados
+lsmod
+
+# Quitar algún modulo cargado
+rmmod
+
+# Agregar un módulo de kernel
+modprobe
+```
+
+### Revisión de Rootkits
+
+> Recordemos que los *Rootkits* son programas maliciosos usados por intrusos para esconder información, alterando el comportamiento del sistema.
+
+A nivel del ***sistema de archivos*** los *Rootkits* buscan remplazar programas comúnmente usados y reconocidos por el sistema.
+
+A nivel de **kernel**, estos buscan agregar otros módulos, alterando el comportamiento del kernel además de ser más dificiles de detectar y erradicar.
+
+Los *Anti-Rootkits* más conocidos que podemos utilzar son:
+
+- *Chkrootkit*
+- *RKH (RootKit Hunter)*
+- *ClamAV*
+
+## Tareas programadas
+
+> También es importante reconocer las tareas programadas presentes en el sistema.
+
+Para ver las tareas específicas de un usuario podemos ejecutar el comando:
+
+```bash
+crontab -l -u [usuario] | tail
+```
+
+Adicionalmente, por cada usuario se escribe una bitácora de tareas programadas en el sistema, en el directorio `/var/spool/cron/crontabs/<usuario>`.
+
+```
+cat /var/spool/cron/crontabs/kali | tail
+```
+
+## Cuentas de usuario
+
+> FInalmente, pero no menos importante, también es útil recopilar información acerca de los usuarios presentes en el ordenador.
+
+***Cuentas de usuario activas***:
+
+```bash
+cat /etc/shadow
+```
+
+***Historial de comandos del usuario***:
+
+```bash
+cat /home/<usuario>/.bash_history
+```
+
+***Archivos personales***:
+
+```
+ls -lah /home/<usuario>/**
+```
+
 # Enlaces
 
-[<- Anterior](HFC19_11_2024.md)
+[<- Anterior](HFC19_11_2024.md) | [Siguiente ->](HFC21_11_2024.md)
