Ligeras correciones a Linea de Tiempo Linux

--- a/HFC/Forense/apuntes/HFC21_11_2024.md
+++ b/HFC/Forense/apuntes/HFC21_11_2024.md
@@ -105,7 +105,24 @@ Y las banderas más utiles son:
 - `-d`: Delimita el archivo con comas
 
 ```bash
-mactime -z 'Mexico/General' -y -b cuerpo.txt > linea_tiempo
+sudo mactime -z 'UTC' -y -b cuerpo.txt > linea_tiempo
+```
+
+Para listar todas las zonas horarias disponibles, podemos ejecutar el siguiente comando:
+
+```bash
+mactime -z list
+
+# -----------------------------------
+#         TIMEZONE LIST
+# -----------------------------------
+# AKST9AKDT
+# Africa/Abidjan
+# Africa/Accra
+# Africa/Addis_Ababa
+# Africa/Algiers
+# Africa/Asmara
+# ...
 ```
 
 ### Línea del tiempo
